# websockets-routes

./: README.md  pyproject.toml
src/websockets_routes/: __init__.py  routers.py
tests/: test_routing.py  test_test.py
